# service_observer

./: Cargo.toml
crawler/: Cargo.toml
crawler/src/: error.rs  lib.rs
entity/: Cargo.toml  README.md
entity/src/: geolocation.rs  ip.rs  lib.rs  prelude.rs
ip_geolocation/: Cargo.toml
ip_geolocation/src/: error.rs  lib.rs  model.rs  scanner.rs
ip_geolocation_crawler/: Cargo.toml
ip_geolocation_crawler/src/: lib.rs
journal_parser/: Cargo.toml
journal_parser/src/: error.rs  journal.rs  lib.rs  models.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20221209_103858_base.rs
service_observer/: Cargo.toml
service_observer/src/: events.rs  main.rs  util.rs
service_observer/src/app/: app.rs  args.rs  config.rs  constants.rs  mod.rs
service_observer/src/ui/: map.rs  mod.rs  tab.rs  table.rs
sshd_logs/: Cargo.toml
sshd_logs/src/: errors.rs  lib.rs  logs.rs
sshd_observer/: Cargo.toml
sshd_observer/src/: main.rs
