[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
sea-orm = { version = "0.12.8", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
ip_geolocation ={ path = "../ip_geolocation"}
entity = { path = "../entity" }
migration = { path = "../migration" }
thiserror = "1.0.50"
