[package]
name = "ip_geolocation_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
sea-orm = { version = "0.10.5", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
entity = { path = "../entity" }
migration = { path = "../migration" }

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }