[package]
name = "migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.59"
tokio = { version = "1.22.0", features = ["full"] }

[dependencies.sea-orm-migration]
version = "0.12.6"
features = [ "sqlx-sqlite", "runtime-tokio-rustls"]
