[package]
name = "service_observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
clokwerk = "0.4.0"
crossterm = "0.25.0"
ctrlc = "3.2.3"
journal_parser ={ path = "../journal_parser"}
sshd_logs ={ path = "../sshd_logs"}
crawler = {path = "../crawler"}
tokio = { version = "1.22.0", features = ["full", "sync"] }
tui = {version = "0.19.0", features = ["serde"]}
config = "0.13.1"
dirs = "4.0.0"
serde = { version = "1.0.149", features = ["derive"] }
