[package]
name = "service_observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clokwerk = "0.4.0"
crossterm = "0.27.0"
ctrlc = "3.4.1"
journal_parser ={ path = "../journal_parser"}
sshd_logs ={ path = "../sshd_logs"}
crawler = {path = "../crawler"}
tokio = { version = "1.34.0", features = ["full", "sync"] }
ratatui = {version = "0.23.0", features = ["serde"]}
config = "0.13.4"
dirs = "5.0.1"
serde = { version = "1.0.193", features = ["derive"] }
